fixed the error with marquee which was going under the bar on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -7,33 +7,43 @@ body{
 }
 /*Announcment Bar on Index Page*/
 .marquee {
-	height: 35px;
-    background: #ff0000;
-    color: white;
-    border-top: 1px solid #800000;
-	border-bottom: 1px solid #800000;
-	
- }
-.marquee p {
-	position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    line-height: 40px;
-    text-align: center; 
-    transform: translateX(100%);
-    animation: scroll-left 50s linear infinite;
-	font-size: 20px;
+  position: relative;
+  overflow: hidden;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  margin: 0 0 40px 0;
+   background: #ff0000;
 }
-               
-@keyframes scroll-left {
-     0% {
-     transform: translateX(100%);
- }
-     100% {
-	transform: translateX(-100%);
-         }
- }
+
+.marquee-keywords-red {
+    margin: 0 auto;
+    white-space: nowrap;
+    overflow: hidden;
+    position: absolute;
+    z-index: 1;
+    font-weight: bold;
+}
+
+.marquee-keywords-red span {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee-keywords 30s linear infinite;
+    color: white;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 0.2em;
+    font-family: var(--heading-font-family);
+    animation-delay: -10s;
+}
+@keyframes marquee-keywords {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
 
 
 /* Header with Logo */
